@@ -52,8 +52,8 @@ typedef struct _dirdesc {
  * Procedures defined for reading directories:
  */
 
-extern void		closedir _ANSI_ARGS_((DIR *dirp));
-extern DIR *		opendir _ANSI_ARGS_((char *name));
-extern struct dirent *	readdir _ANSI_ARGS_((DIR *dirp));
+extern void		closedir (DIR *dirp);
+extern DIR *		opendir (char *name);
+extern struct dirent *	readdir (DIR *dirp);
 
 #endif /* _DIRENT */
