@@ -1,5 +1,10 @@
 2008-09-02  Don Porter  <dgp@users.sourceforge.net>
 
+	* generic/tcl.h:	Stripped "callers" of the _ANSI_ARGS_ macro
+	* compat/dirent2.h:	to support a TCL_NO_DEPRECATED build.
+	* compat/dlfcn.h:
+	* unix/tclUnixPort.h:
+
 	* generic/tcl.h:	Removed the conditional #define of
 	_ANSI_ARGS_ that would support pre-prototype C compilers.  Since
 	_ANSI_ARGS_ is no longer used in tclDecls.h, it's clear no one
